# zenoh-fs

./: .gitignore  README.md  main.py  pyproject.toml  shell.nix
zenoh_fs/: ExecuteFileServer.py  FileServer.py  cli.py  test_cli.py  test_zenohFS.py
